[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "seekcamera-python"
version = "1.3.0"
requires-python = ">=3.0"
dependencies = [
    "numpy>=1",
    "opencv-python>=4",
]
dynamic = ["description", "readme", "license", "authors", "classifiers"]